# xapi-learning-dashboard

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/data/: generate_demo_data.py
backend/src/: config.py  course_catalog.py  db.py  main.py  models.py
backend/src/analytics/: aggregator.py  completion.py  engagement.py  risk.py  skills.py  time_analysis.py
backend/src/api/: courses.py  data_source.py  engagement.py  learners.py  overview.py  skills.py
backend/src/xapi/: client.py  parser.py  verbs.py
backend/tests/: conftest.py  test_aggregator.py  test_api.py  test_completion.py  test_engagement.py  test_risk.py  test_skills.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: ActivityTimeline.jsx  AtRiskTable.jsx  CompletionFunnel.jsx  HeatMap.jsx  KPICard.jsx  Layout.jsx  LoadingState.jsx  ScoreHistogram.jsx  SkillRadar.jsx  TimeHeatMap.jsx
frontend/src/hooks/: useApi.js  useDebounce.js
frontend/src/pages/: CourseDetail.jsx  Courses.jsx  Engagement.jsx  LearnerDetail.jsx  Learners.jsx  Overview.jsx  Settings.jsx  SkillMap.jsx
